generated/checkers/refine/KN-Null-Pointer-Dereference-a54a594d-0/build_logs/syntax-repair-refine-0-2/build_stderr_4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportDerefBug(const clang::Stmt*, const clang::ento::MemRegion*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:405:38: error: ‘class clang::ento::CheckerContext’ has no member named ‘getCheckName’
  405 |     BT = std::make_unique<BugType>(C.getCheckName(),
      |                                      ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:116:6: warning: ‘bool {anonymous}::getStringSize(llvm::APInt&, const clang::Expr*)’ defined but not used [-Wunused-function]
  116 | bool getStringSize(llvm::APInt &StringSize, const Expr *E) {
      |      ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:103:6: warning: ‘bool {anonymous}::getArraySizeFromExpr(llvm::APInt&, const clang::Expr*)’ defined but not used [-Wunused-function]
  103 | bool getArraySizeFromExpr(llvm::APInt &ArraySize, const Expr *E) {
      |      ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:99:21: warning: ‘const llvm::APSInt* {anonymous}::inferSymbolMaxVal(clang::ento::SymbolRef, clang::ento::CheckerContext&)’ defined but not used [-Wunused-function]
   99 | const llvm::APSInt *inferSymbolMaxVal(SymbolRef /*Sym*/, CheckerContext &/*C*/) {
      |                     ^~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
